--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GIS Projects</title>
+    <title>GIS Projects Home Page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Welcome to my GIS Projects Website!</h1>
-    <p>Here, you will find my latest GIS projects and updates.</p>
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>About GIS Projects</title>
-  </head>
-  <body>
-    <h1>About My GIS Projects</h1>
-    <p>Here, you will find information about my GIS projects and my experience in the field.</p>
+    <header>
+      <h1>GIS Projects Home Page</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>Welcome to GIS Projects!</h2>
+      <p>Here, you can find a collection of GIS projects created by me. Feel free to explore them and let me know what you think.</p>
+      <h3>Featured Projects</h3>
+      <ul>
+        <li><a href="#">Project 1</a></li>
+        <li><a href="#">Project 2</a></li>
+        <li><a href="#">Project 3</a></li>
+      </ul>
+    </main>
+    <footer>
+      <p>Copyright © 2023 GIS Projects</p>
+    </footer>
   </body>
 </html>
