--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
     <main>
       <h2>About Me</h2>
       <img src="my_photo.jpg" alt="My Photo">
-      <p>Hi, I'm John Doe, a GIS professional with over 5 years of experience. I have a passion for creating and sharing GIS projects with the community.</p>
+      <p>Hi, I'm Charlyne Njongoro, a GIS professional with over 5 years of experience. I have a passion for creating and sharing GIS projects with the community.</p>
       <h3>Contact Me</h3>
       <ul>
-        <li>Email: john.doe@gisprojects.com</li>
-        <li>Phone: +1 (123) 456-7890</li>
+        <li>Email: njongorocharlyne@gmail.com</li>
+        <li>Phone: 020 5674 2746</li>
       </ul>
     </main>
     <footer>
